<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"  
    android:layout_height="match_parent"
     android:layout_width="match_parent">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/nav_bullet"
            android:title="@string/nav_all" />
        <item
            android:id="@+id/nav_checked"
            android:icon="@drawable/nav_bullet"
            android:title="@string/nav_checked" />
        <item
            android:id="@+id/nav_unchecked"
            android:icon="@drawable/nav_bullet"
            android:title="@string/nav_unchecked" />
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/nav_bullet"
            android:title="@string/nav_store" />
    </group>
</menu>